--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -112,7 +112,7 @@ html(lang='en')
                 .row.g-0
                     .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('assets/img/bg-showcase-1.jpg');")
                     .col-lg-6.order-lg-1.my-auto.showcase-text
-                        h2 Fully Responsive Design
+                        h2 Geodata
                         p.lead.mb-0
                             | When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!
                 .row.g-0
